# src/router.js
@@ -5,8 +5,8 @@ const middleware = require('./middlewares/middlewares');
 
 
 router.get('/registrations', controller.getAll);
-router.post('/registration', middleware.validateParams ,controller.registerUser);
-router.delete('/registration/:id', controller.deleteUser);
-router.put('/registration/:id', middleware.validUpdate, controller.updateUser);
+router.post('/registrations', middleware.validateParams ,controller.registerUser);
+router.delete('/registrations/:id', controller.deleteUser);
+router.put('/registrations/:id', middleware.validUpdate, controller.updateUser);
 
 module.exports = router;
